RESOLVED FIXED79817
[chromium] REGRESSION: Cannot drag a file out
https://bugs.webkit.org/show_bug.cgi?id=79817
Summary [chromium] REGRESSION: Cannot drag a file out
Philip Rogers
Reported 2012-02-28 11:41:45 PST
1. In Chrome Dev(v19) or Webkit 109097, open http://www.thecssninja.com/demo/gmail_dragout/ 2. Drop PDF link to desktop. Nothing happens. 3. Switch to Beta (v18) and repeat. A PDF file appears on linux desktop. See related Chromium bug: http://code.google.com/p/chromium/issues/detail?id=115921
Attachments
Patch (1.54 KB, patch)
2012-02-29 15:36 PST, Daniel Cheng
no flags
Patch (5.29 KB, patch)
2012-02-29 16:07 PST, Daniel Cheng
no flags
Ryosuke Niwa
Comment 1 2012-02-29 10:44:48 PST
Is this really a WebKit bug? FWIW, Safari 5.1 doesn't appear to support dragging files out of the page. Isn't this Chromium specific bug?
Daniel Cheng
Comment 2 2012-02-29 15:36:04 PST
Ryosuke Niwa
Comment 3 2012-02-29 15:37:25 PST
Comment on attachment 129536 [details] Patch presumably, there's no way to test this behavior in DRT?
Daniel Cheng
Comment 4 2012-02-29 15:39:34 PST
(In reply to comment #3) > (From update of attachment 129536 [details]) > presumably, there's no way to test this behavior in DRT? I guess it's probably worth testing that we don't regress behavior on DownloadURL as well. I'll include a small test for it.
Daniel Cheng
Comment 5 2012-02-29 16:07:49 PST
Daniel Cheng
Comment 6 2012-02-29 16:16:03 PST
Comment on attachment 129544 [details] Patch Clearing flags on attachment: 129544 Committed r109280: <http://trac.webkit.org/changeset/109280>
Daniel Cheng
Comment 7 2012-02-29 16:16:08 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.