[chromium] REGRESSION: Cannot drag a file out https://bugs.webkit.org/show_bug.cgi?id=79817

Reviewed by Ryosuke Niwa.

Source/WebCore:

Temporary fix for file drag out. This change won't be needed once DataTransferItemList
support is better implemented.

Test: platform/chromium/fast/events/drag-downloadURL.html

* platform/chromium/ChromiumDataObject.cpp:
(WebCore::ChromiumDataObject::types):

LayoutTests:

* platform/chromium/fast/events/drag-downloadURL-expected.txt: Added.
* platform/chromium/fast/events/drag-downloadURL.html: Added.

Canonical link: https://commits.webkit.org/97033@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109280 268f45cc-cd09-0410-ab3c-d52691b4dbfc